# Agent-Identity

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  HANDOVER.md  Makefile  README.md  docker-compose.yml  package.json  pytest.ini  render.yaml  requirements.txt
app/: config.py  logging.py  main.py
connectors/: cyberark.connector.json  manifest.schema.json  okta.connector.json  sailpoint.connector.json  scim.connector.json
crates/agent-identity-sdk/: Cargo.toml
crates/agent-identity-sdk/src/: lib.rs
docs/: GITHUB_PAGES_DEPLOYMENT.md  account-orchestrator-agent.md  agent-identity-glossary.md  agent-lifecycle.md  agent-salary.md  agent-usage-runtime-ops.md  api.md  autonomyx-agent-framework.md  autonomyx-customer-success-agent.md  crossplane-control-plane.md  customer-account-manager-agent-blueprint.md  customer-onboarding-agent.md  customer-onboarding-integrations.md  design-system.md  economy-layer.md  enterprise-readiness.md  iam-lifecycle-automation.md  identity-control-plane.md  integration-agent.md  integration-examples.md  integrations.md  milestones.md  modular-auth-architecture.md  narrative.md  okta-integration-catalog.md  okta-integration.md  openapi.yaml  openid-agentic-ai-notes.md  paid-customer-agent-creation.md  platform-architecture.md  roadmap.md  services.md  standards-alignment.md  unboxd-platform-integration.md
mcp/: README.md  agent_identity_server.py
output/: README_SURREALQL.md  agent_identity_examples.surql  (+3 more)
output/agent_identity/: Cargo.toml  README.md
output/agent_identity/src/: lib.rs  main.rs
site/: api.html  (+13 more)
(+86 files in other folders)
