[package]
name = "agent-identity-sdk"
version = "0.1.0"
edition = "2021"
authors = ["AGenNext"]
description = "Agent Identity SDK for lifecycle management"
license = "MIT"
documentation = "https://github.com/AGenNext/Agent-Identity/apps/identity"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
