[package]
name = "agent_identity"
version = "0.1.0"
edition = "2021"
authors = ["Agentic AI Team"]
description = "Agent Identity and Lifecycle Management System"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["sync", "rt"] }
thiserror = "1.0"

[lib]
name = "agent_identity"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/main.rs"
